2007-09-28  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scheme-wrapper.c: plugged memory leaks.

	* libgimpbase/gimpprotocol.c (gp_params_destroy): formatting.

2007-09-28  Sven Neumann  <sven@gimp.org>

	* libgimpcolor/gimpcolorspace.c (gimp_hsv_to_rgb_int): avoid the
	ambiguity of returning different values for the same color and
	limit the Hue output range to [0..359].

2007-09-28  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/tiff-load.c (load_rgba): use
	gimp_pixel_rgn_set_row() to set a single row of pixels.

2007-09-28  Sven Neumann  <sven@gimp.org>

	* data/images/gimp-splash.png: fixed typo.

2007-09-28  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/jpeg-load.c (load_image): fixed the twisted logic.

2007-09-28  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/jpeg-load.c: moved handling of the CMYK profile to
	a utility function. Respect the user's color management settings.

2007-09-27  Kevin Cozens  <kcozens@cvs.gnome.org>

	Create SF-RUN-MODE constant for use in Script-Fu. Fixes bug #479893.

	* plug-ins/script-fu/scheme-wrapper.c
	* plug-ins/script-fu/scheme-wrapper.h: Added set_run_mode_constant()
	which creates a new constant called SF-RUN-MODE. This constant can
	be used by Script-Fu scripts when calling a plug-in that needs to
	know the current run mode.

	* plug-ins/script-fu/script-fu-scripts.c
	* plug-ins/script-fu/script-fu-console.c
	* plug-ins/script-fu/script-fu.c
	* plug-ins/script-fu/script-fu-server.c: Added calls to create the
	new SF-RUN-MODE constant.

	* plug-ins/script-fu/scripts/difference-clouds.scm: Pass SF-RUN-MODE
	to the solid noise plug-in instead of always using RUN-INTERACTIVE.

2007-09-27  Michael Natterer  <mitch@gimp.org>

	* app/gui/ige-mac-menu.c: new version which correctly updates the
	menus when items are added or removed.

2007-09-27  Sven Neumann  <sven@gimp.org>

	* configure.in: define HAVE_LCMS if lcms is available.

	* plug-ins/jpeg/Makefile.am: link with LIBLCMS.
