@@ -1,3 +1,9 @@
+2007-09-28  Kevin Cozens  <kcozens@cvs.gnome.org>
+
+	* plug-ins/script-fu/scripts/addborder.scm: Made all the functions
+	defined in the file local instead of global to avoid possible
+	conflicts with other scripts.
+
 2007-09-28  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/script-fu/scheme-wrapper.c: plugged memory leaks.
